<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

  <TextView
      android:id="@+id/display_order"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text=""
      android:textSize="18sp"
      android:textStyle="bold"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
  <TextView
      android:id="@+id/delivery_method"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:textStyle="bold"
      android:text="@string/choose_deliver_method"
      android:textColor="@color/teal_200"
      app:layout_goneMarginStart="24dp"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@+id/display_order"
      app:layout_constraintStart_toStartOf="parent"
      />
  <RadioGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      app:layout_constraintTop_toBottomOf="@+id/delivery_method"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginLeft="24dp">
      <RadioButton
          android:id="@+id/same_day"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/same_day_messenger_service"
          android:onClick="onRadioButtonClicked"
          android:textColor="@color/purple_700"
          />
      <RadioButton
          android:id="@+id/next_day"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/next_day_ground_delivery"
          android:onClick="onRadioButtonClicked"
          android:textColor="@color/purple_700"
        />
      <RadioButton
          android:id="@+id/pick_up"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pick_up"
          android:onClick="onRadioButtonClicked"
          android:textColor="@color/purple_700"
          />
  </RadioGroup>
  </androidx.constraintlayout.widget.ConstraintLayout>