<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_desserts"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/text_choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_dessert"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@+id/text_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/donut"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/donut"
        android:onClick="showDonutOrderMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_choose_dessert"
        android:contentDescription="@string/donuts_are_glazed_and_sprinkled_with_candy"/>

    <TextView
        android:id="@+id/text_donut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textStyle="italic"
        android:textColor="@color/purple_500"
        android:text="@string/donuts_are_glazed_and_sprinkled_with_candy"
        app:layout_constraintBottom_toBottomOf="@+id/donut"
        app:layout_constraintStart_toEndOf="@+id/donut"
        app:layout_constraintTop_toBottomOf="@+id/text_choose_dessert"/>

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:onClick="showIceCreamMessage"
        android:contentDescription="@string/ice_cream_sandwiches_have_chocolate_and_vanilla_fillings"
        android:src="@drawable/ice_cream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut" />

    <TextView
        android:id="@+id/text_ice_cream"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/ice_cream_sandwiches_have_chocolate_and_vanilla_fillings"
        android:textColor="@color/purple_500"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/ice_cream"
        app:layout_constraintStart_toEndOf="@+id/ice_cream"
        app:layout_constraintTop_toBottomOf="@+id/donut" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/froyo_is_a_premium_self_serve_frozen_yoghurt"
        android:src="@drawable/froyo"
        android:onClick="showFroyoOrderMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ice_cream" />

    <TextView
        android:id="@+id/text_froyo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginLeft="154dp"
        android:text="@string/froyo_is_a_premium_self_serve_frozen_yoghurt"
        android:textColor="@color/purple_500"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/froyo"
        app:layout_constraintStart_toStartOf="@+id/froyo"
        app:layout_constraintTop_toBottomOf="@+id/ice_cream" />


</androidx.constraintlayout.widget.ConstraintLayout>